--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -29,9 +29,13 @@ spring.redis.port=6379
 ## 连接超时时间（毫秒）  
 #spring.redis.timeout=1000
 
+#rabbitmq
+spring.rabbitmq.host=192.168.1.130
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
+spring.rabbitmq.publisher-confirms=true
+spring.rabbitmq.virtual-host=/
 
-#log
-logging.level.root=INFO
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate=ERROR
-logging.file=d:\\log\\demo.log
+
+    
