--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -74,6 +74,7 @@
 			<artifactId>spring-boot-starter-log4j</artifactId>
 			<version>1.3.8.RELEASE</version>
 		</dependency>
+		
 		<!-- 整合log4j end -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -81,12 +82,20 @@
 			<scope>test</scope>
 		</dependency>
 		
-		<!-- pulsar依赖 -->
+		<!-- pulsar依赖 start
 		<dependency>
-		    <groupId>com.yahoo.pulsar</groupId>
-		    <artifactId>pulsar-client</artifactId>
-		    <version>1.16.5</version>
+		  <groupId>org.apache.pulsar</groupId>
+		  <artifactId>pulsar-client</artifactId>
+		  <version>1.14</version>
 		</dependency>
+         pulsar依赖 end -->
+         
+        <!--rabbitmq  start-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+		<!--rabbitmq  end-->
 	</dependencies>
 
 	<build>
